objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Central Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned - Accepted</fullName>
        </values>
        <values>
            <fullName>Assigned - Unaccepted</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Converted-order taken</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Unassigned</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACTIVITY_NOTES__c</fullName>
        <description>from central org</description>
        <label>ACTIVITY NOTES</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APL_Admin_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Appliances BU to identify whether this lead has been checked by APL Leads admin</description>
        <label>APL Admin Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASSIGNEE_EMAIL__c</fullName>
        <description>from Central Org</description>
        <label>ASSIGNEE EMAIL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASSIGNEE_NAME__c</fullName>
        <description>from central org</description>
        <label>ASSIGNEE NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASSIGNEE_NETWORK_ID__c</fullName>
        <description>to central org</description>
        <label>ASSIGNEE NETWORK ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Analysis__c</fullName>
        <inlineHelpText>Define the lead type</inlineHelpText>
        <label>Customer Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Event_Lead_Business_Unit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Sub-System Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Sub-Contractor</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>System Integrator</fullName>
                </value>
                <value>
                    <fullName>Committee</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Student/Academia</fullName>
                </value>
                <value>
                    <fullName>Device Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Customer - Direct</fullName>
                </value>
                <value>
                    <fullName>Customer - Indirect</fullName>
                </value>
                <value>
                    <fullName>Component/System Integrator</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>End-User</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Areas__c</fullName>
        <inlineHelpText>Choose the application area of the lead</inlineHelpText>
        <label>Application Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Event_Lead_Business_Unit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>IB: Digital Signage</fullName>
                </value>
                <value>
                    <fullName>IB: Horticultural lighting</fullName>
                </value>
                <value>
                    <fullName>IB: HVAC</fullName>
                </value>
                <value>
                    <fullName>IB: Indoor Lighting</fullName>
                </value>
                <value>
                    <fullName>IB: LED Street Lighting</fullName>
                </value>
                <value>
                    <fullName>IB: Lighting Control</fullName>
                </value>
                <value>
                    <fullName>IB: Photovoltaics</fullName>
                </value>
                <value>
                    <fullName>IB: Safety &amp; Security</fullName>
                </value>
                <value>
                    <fullName>RAIL:Data Solutions</fullName>
                </value>
                <value>
                    <fullName>RAIL:Identification Solutions</fullName>
                </value>
                <value>
                    <fullName>RAIL:Trackside</fullName>
                </value>
                <value>
                    <fullName>RAIL:Power, Signal &amp; Cable</fullName>
                </value>
                <value>
                    <fullName>RAIL: Roofline</fullName>
                </value>
                <value>
                    <fullName>RAIL: Sensors</fullName>
                </value>
                <value>
                    <fullName>Appliances: Microwave</fullName>
                </value>
                <value>
                    <fullName>Appliances: Refrigeration</fullName>
                </value>
                <value>
                    <fullName>Appliances: Ranges</fullName>
                </value>
                <value>
                    <fullName>Appliances: Washer</fullName>
                </value>
                <value>
                    <fullName>Appliances: Dryer</fullName>
                </value>
                <value>
                    <fullName>Appliances: Cooktop</fullName>
                </value>
                <value>
                    <fullName>Appliances: Small appliances</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Data Center Equipment</fullName>
                </value>
                <value>
                    <fullName>Servers</fullName>
                </value>
                <value>
                    <fullName>Switches</fullName>
                </value>
                <value>
                    <fullName>Routers</fullName>
                </value>
                <value>
                    <fullName>Enterprise Equipment</fullName>
                </value>
                <value>
                    <fullName>Wireless infrastructure</fullName>
                </value>
                <value>
                    <fullName>Network / Telecomm infrastructure</fullName>
                </value>
                <value>
                    <fullName>Mobile Device (Phones, Tablets, PCs, etc.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BUD_Confidence__c</fullName>
        <description>Confidence of the Business Unit Determination match.

80 - Existing relationship with the contact
60 - DUNS match to account
40 - Industry match
20 - Web activity / part interest match</description>
        <inlineHelpText>Confidence of the Business Unit Determination match.

80 - Existing relationship with the contact
60 - DUNS match to account
40 - Industry match
20 - Web activity / part interest match</inlineHelpText>
        <label>BUD Confidence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BU_Owner_Email__c</fullName>
        <label>BU Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BU_Owner_Name__c</fullName>
        <label>BU Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Owner_Phone__c</fullName>
        <label>BU Owner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bad_Data_Type__c</fullName>
        <description>Additional detail for the related status reason code</description>
        <inlineHelpText>Additional detail for the related status reason code</inlineHelpText>
        <label>Status Reason Code Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>STATUS_REASON_CODE__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Phone and Email</fullName>
                </value>
                <value>
                    <fullName>Aerospace, Defense &amp; Marine</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Application Tooling</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Devices</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Industrial &amp; Commercial Transportation</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Being_Nurtured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if a lead is currently being nurtured by Inside Sales</description>
        <inlineHelpText>Identifies if a lead is currently being nurtured by Inside Sales</inlineHelpText>
        <label>Being Nurtured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Subvertical__c</fullName>
        <label>Business Unit Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;C</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>RAIL</fullName>
                </value>
                <value>
                    <fullName>ICT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aerospace, Defense &amp; Marine</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Application Tooling</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Devices</fullName>
                </value>
                <value>
                    <fullName>Distribution Channel</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Enterprise Networks</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Industrial &amp; Commercial Transportation</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sensors</fullName>
                </value>
                <value>
                    <fullName>Telecom Networks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAD_MODEL_DOWNLOAD__c</fullName>
        <description>from central org</description>
        <inlineHelpText>number of CAD model downloads from the TE webpage</inlineHelpText>
        <label>CAD MODEL DOWNLOAD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHECK_DISTRIBUTOR_INVENTORY__c</fullName>
        <description>from central org</description>
        <label>CHECK DISTRIBUTOR INVENTORY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHECK_PRICING_AVAILABILITY__c</fullName>
        <description>from central org</description>
        <label>CHECK PRICING AVAILABILITY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHECK_PRODUCT_COMPLIANCE__c</fullName>
        <description>from central org</description>
        <label>CHECK PRODUCT COMPLIANCE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_CONTACTED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>from central org</description>
        <label>CUSTOMER CONTACTED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the contact wants to be contacted by phone</inlineHelpText>
        <label>Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Type__c</fullName>
        <formula>Event_Campaign__r.CampaignMemberRecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Member Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Tracking_Code__c</fullName>
        <label>Campaign Tracking Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Central_Org_Create_Date_Time__c</fullName>
        <description>from central org</description>
        <label>Central Org Create Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Communities_Distributor__c</fullName>
        <inlineHelpText>Name of the distributor that has been assigned to the MQL, either manually or through automation. Can include distributors that are not on the partner community.</inlineHelpText>
        <label>Assigned Distributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arrow</fullName>
                </value>
                <value>
                    <fullName>Avnet</fullName>
                </value>
                <value>
                    <fullName>Element14</fullName>
                </value>
                <value>
                    <fullName>Farnell E14</fullName>
                </value>
                <value>
                    <fullName>Future</fullName>
                </value>
                <value>
                    <fullName>Heilind</fullName>
                </value>
                <value>
                    <fullName>Mapro</fullName>
                </value>
                <value>
                    <fullName>Newark</fullName>
                </value>
                <value>
                    <fullName>TTI</fullName>
                </value>
                <value>
                    <fullName>RS Components</fullName>
                </value>
                <value>
                    <fullName>Global Electronics Corp</fullName>
                </value>
                <value>
                    <fullName>Kanetsu</fullName>
                </value>
                <value>
                    <fullName>Kyoritsu Dengyo</fullName>
                </value>
                <value>
                    <fullName>Nihon Denka Kogyosyo</fullName>
                </value>
                <value>
                    <fullName>Suzuden</fullName>
                </value>
                <value>
                    <fullName>Takagi Shokai</fullName>
                </value>
                <value>
                    <fullName>Chip One Stop Inc</fullName>
                </value>
                <value>
                    <fullName>Compel International Oy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Owner_GIBU__c</fullName>
        <description>if the lead is already entered as a contact in Salesforce, this field will be populated with the name of the contact owner GIBU</description>
        <label>Contact Owner GIBU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Name__c</fullName>
        <description>if the lead is already entered as a contact in Salesforce, this field will be populated with the name of the contact owner</description>
        <label>Contact Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_with_same_Email_Address_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The purpose of this field is to flag the Lead record that also has an associated Contact record with the same email address. The flagged lead records can be later deleted or other actions may be taken.</description>
        <label>Contact with same Email Address Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_in_BU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted in BU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Standardized_Country_Names__c</fullName>
        <label>Country (Standardized Country Names)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegov</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency_Confirm__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Currency Confirm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DATE_ACCEPTED__c</fullName>
        <description>from central org</description>
        <label>DATE ACCEPTED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATE_ASSIGNED__c</fullName>
        <description>from central org</description>
        <label>DATE ASSIGNED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATE_CLOSED__c</fullName>
        <description>from central org</description>
        <label>DATE CLOSED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATE_CONVERTED_TO_OPPTY__c</fullName>
        <description>from central org</description>
        <label>DATE CONVERTED TO OPPTY</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATE_DEAD__c</fullName>
        <description>from central org</description>
        <label>DATE DEAD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATE_OF_INITIAL_CONTACT__c</fullName>
        <description>from central org</description>
        <label>DATE OF INITIAL CONTACT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATE_OF_LAST_SE_ACTION__c</fullName>
        <description>from central org</description>
        <label>DATE OF LAST SE ACTION</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATE_QUALIFIED__c</fullName>
        <description>from central org</description>
        <label>DATE QUALIFIED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATE_REJECTED__c</fullName>
        <description>from central org</description>
        <label>DATE REJECTED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATE_WON__c</fullName>
        <description>from central org</description>
        <label>DATE WON</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DCT_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DCT Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <description>DUNS Number, related to the Company indicated by the lead, as found by the Realtime BU Determination process. It is passed by Eloqua to SFDC.</description>
        <inlineHelpText>DUNS Number, related to the Company indicated by the lead, as found by the Realtime BU Determination process. It is passed by Eloqua to SFDC.</inlineHelpText>
        <label>DUNS Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataComm_Region__c</fullName>
        <description>DTC region of Lead Owner</description>
        <inlineHelpText>Enter the region of the Lead Owner</inlineHelpText>
        <label>DataComm Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <inlineHelpText>please enter the day when the lead was captured</inlineHelpText>
        <label>Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Currency__c</fullName>
        <description>default currency from owner</description>
        <label>Default Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disti_Check_Text__c</fullName>
        <description>indicates a distributor based on email ending of MQL owner</description>
        <formula>IF(CONTAINS(MQLRecord_ID__r.Owner:User.Email, &apos;ttiinc.com&apos;),&apos;TTI&apos;,
IF(CONTAINS(MQLRecord_ID__r.Owner:User.Email, &apos;rs-components.com&apos;),&apos;RS Components&apos;,
IF(CONTAINS(MQLRecord_ID__r.Owner:User.Email, &apos;avnet&apos;),&apos;Avnet&apos;,
IF(CONTAINS(MQLRecord_ID__r.Owner:User.Email, &apos;farnell.com&apos;),&apos;Farnell&apos;,
IF(CONTAINS(MQLRecord_ID__r.Owner:User.Email, &apos;future&apos;),&apos;Future&apos;,&apos;&apos;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disti Check Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Comments__c</fullName>
        <inlineHelpText>CONVERT:Project name, Project life-yrs, Distributor Salesperson Name &amp; Phone #,Initial Order &amp; Mfg start date,TE Part Numbers,Annual quantities,Target pricing,Region of Design,Mfg &amp; sales, TE Part Nos,Competitive info, Actions required to WIN</inlineHelpText>
        <label>Distributor Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distributor_Response__c</fullName>
        <label>Distributor Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Distributor Response</fullName>
                </value>
                <value>
                    <fullName>Convert to opportunity</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distributor_Status_Reason_Code__c</fullName>
        <label>Distributor Status Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No current design-in opportunity/requirement</fullName>
                </value>
                <value>
                    <fullName>This is not  a Lead</fullName>
                </value>
                <value>
                    <fullName>Inadequate data to follow up Lead</fullName>
                </value>
                <value>
                    <fullName>Lead Contact has left company / cannot be contacted</fullName>
                </value>
                <value>
                    <fullName>TE does not have a suitable offering</fullName>
                </value>
                <value>
                    <fullName>TE parts will not mate with mandatory competitive parts</fullName>
                </value>
                <value>
                    <fullName>TE cannot offer the mandatory complete package</fullName>
                </value>
                <value>
                    <fullName>TE not competitive on price for this opportunity</fullName>
                </value>
                <value>
                    <fullName>TE delivery timescales too long for this opportunity</fullName>
                </value>
                <value>
                    <fullName>TE delivery MOQs unsuitable for this opportunity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>